Improved CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,18 +17,17 @@
 cmake_minimum_required(VERSION 3.0)
 project(vidthumb)
 
-include(FindPkgConfig)
-find_package(Threads)
-find_package(Boost)
+find_package(Boost REQUIRED)
+find_package(Threads REQUIRED)
+find_package(PkgConfig REQUIRED)
 pkg_search_module(GST REQUIRED gstreamer-1.0)
 pkg_search_module(GST_PBUTILS REQUIRED gstreamer-pbutils-1.0)
 pkg_search_module(GLIB REQUIRED glib-2.0)
 pkg_search_module(CAIROMM REQUIRED cairomm-1.0)
 
-list(APPEND CMAKE_CXX_FLAGS -std=c++1y)
-include_directories(external/logmich/include/)
+set(WARNINGS 0 CACHE BOOL "Switch on extra warnings")
 
-if(DEVELOPER)
+if(WARNINGS)
   set(WARNING_CXX_FLAGS
     -pedantic
     -Wall
@@ -44,9 +43,11 @@ if(DEVELOPER)
     -Wno-unused-parameter
     -Wfloat-equal
     -Wunreachable-code)
-else(DEVELOPER)
-  set(WARNING_CXX_FLAGS "")
-endif(DEVELOPER)
+endif()
+
+
+add_compile_options(-std=c++1y)
+include_directories(external/logmich/include/)
 
 add_library(liblogmich external/logmich/src/log.cpp external/logmich/src/logger.cpp)
 set_target_properties(liblogmich PROPERTIES OUTPUT_NAME logmich)
@@ -54,6 +55,7 @@ target_include_directories(liblogmich PUBLIC external/logmich/include/)
 target_link_libraries(liblogmich PUBLIC boost_system boost_filesystem)
 
 add_executable(mediainfo src/media_info.cpp)
+target_compile_options(mediainfo PRIVATE ${WARNING_CXX_FLAGS})
 target_include_directories(mediainfo SYSTEM PUBLIC
   liblogmich
   ${GST_INCLUDE_DIRS}
@@ -81,24 +83,25 @@ target_link_LIBRARIES(gstdiscover
   ${CAIROMM_LIBRARIES})
 
 add_library(gtest STATIC ${CMAKE_CURRENT_SOURCE_DIR}/external/googletest/src/gtest-all.cc)
-target_include_directories(gtest SYSTEM PRIVATE
-  external/googletest/include/
-  external/googletest/)
+target_include_directories(gtest SYSTEM PUBLIC
+  ${CMAKE_CURRENT_SOURCE_DIR}/external/googletest/include/
+  ${CMAKE_CURRENT_SOURCE_DIR}/external/googletest/)
 
 # for filename in Glob("uitests/*_test.cpp", strings=True):
 #     uitest_prog = env.Program(filename[:-4], filename)
 #     Default(uitest_prog)
 
 add_library(gtest_main STATIC ${CMAKE_CURRENT_SOURCE_DIR}/external/googletest/src/gtest_main.cc)
-target_include_directories(gtest_main SYSTEM PRIVATE
-  external/googletest/include/
-  external/googletest/)
+target_include_directories(gtest_main SYSTEM PUBLIC
+  ${CMAKE_CURRENT_SOURCE_DIR}/external/googletest/include/
+  ${CMAKE_CURRENT_SOURCE_DIR}/external/googletest/)
 target_link_libraries(gtest INTERFACE ${CMAKE_THREAD_LIBS_INIT})
 
 file(GLOB TEST_VIDTHUMB_SOURCES_CXX RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
   tests/*_test.cpp)
 
 add_executable(test_vidthumb ${TEST_VIDTHUMB_SOURCES_CXX})
+target_compile_options(test_vidthumb PRIVATE ${WARNING_CXX_FLAGS})
 target_link_libraries(test_vidthumb gtest gtest_main)
 
 add_executable(vidthumb
@@ -108,6 +111,7 @@ add_executable(vidthumb
   src/param_list.cpp
   src/video_processor.cpp
   src/vidthumb.cpp)
+target_compile_options(vidthumb PRIVATE ${WARNING_CXX_FLAGS})
 target_include_directories(vidthumb SYSTEM PUBLIC
   liblogmich
   ${GST_INCLUDE_DIRS}
