--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "external/logmich"]
 	path = external/logmich
-	url = https://github.com/Grumbel/logmich.git
+	url = https://gitlab.com/logmich/logmich.git
 [submodule "external/cmake-modules"]
 	path = external/cmake-modules
 	url = https://gitlab.com/grumbel/cmake-modules.git
