Convert vidthumb to use gstreamermm

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,9 +22,6 @@ include(mk/cmake/TinyCMMC.cmake)
 find_package(Threads REQUIRED)
 find_package(PkgConfig REQUIRED)
 find_package(fmt REQUIRED)
-pkg_search_module(GST REQUIRED gstreamer-1.0 IMPORTED_TARGET)
-pkg_search_module(GLIB REQUIRED glib-2.0 IMPORTED_TARGET)
-
 pkg_search_module(GLIBMM REQUIRED glibmm-2.4 IMPORTED_TARGET)
 pkg_search_module(CAIROMM REQUIRED cairomm-1.0 IMPORTED_TARGET)
 pkg_search_module(GSTREAMERMM REQUIRED gstreamermm-1.0 IMPORTED_TARGET)
@@ -72,8 +69,8 @@ target_compile_options(vidthumb PRIVATE ${TINYCMMC_WARNINGS_CXX_FLAGS})
 target_link_libraries(vidthumb PRIVATE
   logmich::logmich
   fmt::fmt
-  PkgConfig::GST
-  PkgConfig::GLIB
+  PkgConfig::GSTREAMERMM
+  PkgConfig::GLIBMM
   PkgConfig::CAIROMM)
 
 install(TARGETS vidthumb mediainfo
